[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/main/game/player/textures/molly_portrait.png" type="Texture" id=1]
[ext_resource path="res://src/main/menus/lobby/player_card.gd" type="Script" id=2]

[node name="PlayerCard" type="PanelContainer"]
margin_right = 134.0
margin_bottom = 238.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 327.0
margin_bottom = 495.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 310.0
margin_bottom = 478.0
custom_constants/separation = 20
alignment = 1

[node name="PortraitImage" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Options" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 320.0
margin_right = 300.0
margin_bottom = 468.0
custom_constants/separation = 10

[node name="NameField" type="LineEdit" parent="MarginContainer/VBoxContainer/Options"]
margin_right = 300.0
margin_bottom = 24.0
text = "Player 1"
align = 1

[node name="ClassOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/Options"]
margin_top = 34.0
margin_right = 300.0
margin_bottom = 54.0
align = 1

[node name="InputOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/Options"]
margin_top = 64.0
margin_right = 300.0
margin_bottom = 84.0
align = 1

[node name="TeamOptions" type="SpinBox" parent="MarginContainer/VBoxContainer/Options"]
margin_top = 94.0
margin_right = 300.0
margin_bottom = 118.0
min_value = 1.0
max_value = 99.0
value = 1.0
align = 1
prefix = "Team"

[node name="RemoveButton" type="Button" parent="MarginContainer/VBoxContainer/Options"]
margin_top = 128.0
margin_right = 300.0
margin_bottom = 148.0
text = "Remove"
[connection signal="text_changed" from="MarginContainer/VBoxContainer/Options/NameField" to="." method="_name_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Options/ClassOptions" to="." method="_class_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Options/InputOptions" to="." method="_input_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Options/TeamOptions" to="." method="_team_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options/RemoveButton" to="." method="delete"]
